@@ -1,3 +1,3 @@
-EBUILD fvwm-crystal-9999.ebuild 1898 SHA256 fac82bb7b4a16ddae6a05653c60d659c7c40d97b6ba906ee85e092c2b7a6d2fc SHA512 609a3e5211842f51e913f97e3b6cb6bdc6c14a40fdebac62b65169456149c4584c47ef736c549ed117524277157398defa2f67f0017d47b8d10b086b361957fd WHIRLPOOL 2a96b6df1795baa473b35cf7d1d43f4572d86e1460c2cb88d9727913dcd9c6636a03c10f5d6998716471084a7407afc2f40fb7040fcd58d9697471ae49077565
-MISC ChangeLog 3719 SHA256 a79a6104beca1b9fc5ae4804a4aa180d8a2a09317ea9f6b30719c0488538ce94 SHA512 98659c03eb40f10faafa7e4b0c32ffd9e6448e9a50182e18e8f404da8b18c707f89e015b32d5f21082c78353dc7d5d249b5c7f5d970cf121462bfafd495ea160 WHIRLPOOL 08950a5fb17261cee4b9db137e8edb6a3b18a35811d189935337ec72a5eabb61ceb3aa9540b99a4843f4b0ca26a4e89183dcedde69024c0d624920c615751b2a
-MISC metadata.xml 360 SHA256 bb714d62534f455f4e5ed3a6116e72d3338a4e422f27cfb2f772158c7a9649bf SHA512 8cdac8458be50e26d68bf78d485bf6b52d3ea71f76b7319682af437fe2c53a916ec18e1e914b11820dbc81d2c635c795e33ccda97441bb3fc7d56b41805cf0af WHIRLPOOL b3988629fecceee13a9b015c132a9e598bef5cae952de03bdd322989f57b198dcca301fa4fafe46a4be9967dd24f129553eb93470167af3f9ce72914a8c10729
+EBUILD fvwm-crystal-9999.ebuild 2131 SHA256 22c101663af1dec82fd42093ac9b1f08a27cae3e99be721939d922b7be5bad94 SHA512 8bf8c27382b95f198e09c137073d24fa0531e07594371dd66d76f798c196f6c2fcb78ec3cc37903b8566fcf42c24a56de5d8373bcbbfe563c47509631a6388b0 WHIRLPOOL 5a627cae0582779734695e02da6a0a54c8582221314ca5bf975cb52e24cfc2de7d815218d19fbf35f6b2745ee7bf47836a80b5c5f83b67497b5e8b9b833d8d2a
+MISC ChangeLog 3951 SHA256 477f36e141acf9211c33076ae71933dfbf21615c252a4b98d9343f459bddfe4d SHA512 d5dc9b113dd260eeded0be624f7841d33f2753798dbf71060a280e464be97793b8a8a4784a2febb79d287ddf78d6896096ec571094df2125fbb8be397d35a685 WHIRLPOOL 1cbeeff0aa10e818751ae87cd61cbded5dbe5285e61d35efd4e13cc3682e1543eb1e82990ba1a6d3aa197f300d36bdf021440c891a913599a64431ad77e60d78
+MISC metadata.xml 1240 SHA256 6d7bbe6fdd75271f090d9a1d1355c6aad8f37ef0d8219fb02bf2e5bf4e37b7aa SHA512 189316d3b00dc776610b0e57f0b6c7b752c31bfff2d4a37b533db65b108c1d168096fc2d864682f4ee541adf4f6c931bbb3b124ad9424f53c4775608380f0b83 WHIRLPOOL a123e89465737f713936e44ebf3caabb2aa3021c2a50bce58d5386419efaf9f983cb286055222bcb020729afca4155d06862f6e2afdb23a9bf4e4c83f7f82517
