@@ -1,11 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<maintainer>
-		<email>proaudio@tuxfamily.org</email>
-		<name>pro-audio overlay team</name>
-	</maintainer>
-	<use>
-		<flag name="xdg">Enable xdg localized user directories support via x11-misc/xdg-user-dirs</flag>
-	</use>
+<herd>proxy-maintainers</herd>
+<maintainer>
+  <email>dominique_libre@users.sourceforge.net</email>
+  <name>Dominique Michel</name>
+</maintainer>
+<longdescription>
+FVWM-Crystal is a set of configuration files for FVWM window manager,
+with additional programs and scripts. Some of it's features are:
+ * quick launching of a terminal with just one click on a desktop
+ * a specially configured terminal window, similar to a console from FPP games
+ * builtin control over XMMS player and over aumix mixer from the keyboard and 
+   buttons on the screen
+ * very good ability to control the desktop from the keyboard, including window
+   switching, moving, shading/unshading, maximizing, resizing, moving between
+   desktop pages
+ * transparent window titlebars, menus and panels on the desktop
+</longdescription>
+<use>
+  <flag name="xdg">Enable xdg localized user directrories support via x11-misc/xdg-user-dirs</flag>
+  <flag name="amixer">Enable alsamixer support (alsa-sound/alsa-utils)</flag>
+  <flag name="pm-utils">Enable support for suspend/resume the system through sys-power/pm-utils</flag>
+</use>
 </pkgmetadata>
